--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -90,7 +90,6 @@ function(vc_download_testdata)#{{{
       add_dependencies(SSE4_2 download-testdata)
       add_dependencies(AVX download-testdata)
       add_dependencies(AVX2 download-testdata)
-      add_dependencies(MIC download-testdata)
       add_dependencies(KNL download-testdata)
       add_dependencies(AVX512 download-testdata)
    elseif(Vc_ARM)
@@ -164,7 +163,6 @@ if(Vc_X86)
    endif()
    vc_target_setup(avx snb "-xAVX" "-mavx" "/arch:AVX")
    vc_target_setup(avx2 hsw "-xCORE-AVX2" "-mavx2|-mbmi|-mbmi2|-mlzcnt|-mfma" "/arch:AVX2")
-   #vc_target_setup(mic "" "-mmic")
    vc_target_setup(knl knl "-xMIC-AVX512" "-march=knl" "/arch:KNL")
    vc_target_setup(avx512 skx "-xCORE-AVX512" "-march=skylake-avx512" "/arch:AVX512")
 elseif(Vc_ARM)
@@ -178,7 +176,7 @@ macro(vc_add_run_target _target emulator run_target_list)#{{{
       if(emulator)
          get_target_executable(_exe "${_target}")
          add_custom_target(run_${_target}
-            ${emulator} "${_exe}" "-v" # FIXME: MIC_NATIVELOAD needs `emulator exe -a -v`
+            ${emulator} "${_exe}" "-v"
             DEPENDS ${_target}
             COMMENT "Execute ${_target} test"
             VERBATIM
@@ -260,11 +258,6 @@ function(vc_add_test name) #{{{
       if(impl STREQUAL "nosimd")
          set(label NoSIMD)
          set(use_var TRUE)
-      elseif(impl STREQUAL "mic")
-         set(use_var "MIC_NATIVE_FOUND")
-         if(MIC_NATIVELOAD)
-            set(emulator ${MIC_NATIVELOAD})
-         endif()
       elseif(Vc_X86 AND INTEL_SDE AND NOT ${use_var})
          set(use_var TRUE)
          set(emulator "${INTEL_SDE};${sde_cpuid_${impl}};--")
@@ -430,13 +423,9 @@ if(OBJDUMP AND NOT ENABLE_UBSAN) # ubsan changes codegen too much, just skip it
          endif()
          set(_target "${target}${suffix}")
          set(_test test_${_target})
-         if("${_impl}" STREQUAL "MIC")
-            mic_add_executable(${_target} SOURCES abi${suffix}.cpp LINK_LIBRARIES Vc_MIC COMPILE_FLAGS "-DVc_ABI=${abi};${ARGN};-O2")
-         else()
-            add_executable(${_target} EXCLUDE_FROM_ALL abi${suffix}.cpp)
-            set_property(TARGET ${_target} APPEND PROPERTY COMPILE_DEFINITIONS "Vc_ABI=${abi}")
-            set_property(TARGET ${_target} APPEND PROPERTY COMPILE_OPTIONS "${ARGN};-O2")
-         endif()
+         add_executable(${_target} EXCLUDE_FROM_ALL abi${suffix}.cpp)
+         set_property(TARGET ${_target} APPEND PROPERTY COMPILE_DEFINITIONS "Vc_ABI=${abi}")
+         set_property(TARGET ${_target} APPEND PROPERTY COMPILE_OPTIONS "${ARGN};-O2")
          add_target_property(${_target} LABELS "${_impl}")
          add_dependencies(${_impl} ${_target})
          add_dependencies(build_tests ${_target})
@@ -475,14 +464,6 @@ if(OBJDUMP AND NOT ENABLE_UBSAN) # ubsan changes codegen too much, just skip it
          test_abi(abi_AVX2    AVX2 avx ${Vc_avx2_flags})
          test_abi(abi_AVX512  AVX512 avx512 ${Vc_avx512_flags})
          test_abi(abi_KNL     KNL avx512 ${Vc_knl_flags})
-      endif()
-   endif()
-   if(MIC_NATIVE_FOUND)
-      find_program(MIC_OBJDUMP x86_64-k1om-linux-objdump PATHS ENV PATH "${MIC_TARGET_TOOLS_DIR}/bin")
-      mark_as_advanced(MIC_OBJDUMP)
-      if(MIC_OBJDUMP)
-         set(OBJDUMP "${MIC_OBJDUMP}")
-         test_abi(abi_MIC MIC)
       endif()
    endif()
 
