Warn about not-optimized shuffle
Signed-off-by: Matthias Kretz <kretz@kde.org>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,7 +25,7 @@ if(NOT "$ENV{TRAVIS_OS_NAME}" STREQUAL "")
    set(CMAKE_CXX_FLAGS_RELEASE "-O0 -DNDEBUG") # try to not time out, -O0 is faster
 endif()
 
-add_definitions(-DCOMPILE_FOR_UNIT_TESTS)
+add_definitions(-DCOMPILE_FOR_UNIT_TESTS -DVc_NO_OPTIMIZATION_WARNINGS)
 if(Vc_COMPILER_IS_MSVC)
    AddCompilerFlag("/wd4267") # Disable warning "conversion from 'size_t' to 'int', possible loss of data"
    AddCompilerFlag("/wd4723") # Disable warning "potential divide by 0" (suppress doesn't work)
